# LaifProject

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: test.yml
backend/: Dockerfile  crud.py  database.py  main.py  mock_data.py  models.py  pyproject.toml  schemas.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_measurements.py  test_api_patients.py
backend/tests/unit/: test_crud.py  test_models.py  test_schemas.py
frontend/: Dockerfile  app.py  package.json
